Began moving parts of chapter 3 into appendices.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -135,7 +135,7 @@ Another method of illustrating the relationships between different categories of
 
 Figure \ref{Want_virtuality_matrix_modified.png} presents a modified version of Want's matrix that meshes more closely with the framework laid out by Milgram and Kishino and the definitions ultimately adopted by this thesis for framing parallel reality within. Where the original matrix positions cross reality in the upper left quadrant, the modified matrix instead positions augmented virtuality. The congruence of `experience virtual' and `overlay data real' would seem to hint toward a position within the right half of the reality-virtuality continuum and a single partially modelled environment, rather than eliciting ideas of the two discrete environments, one real and the other virtual, that the cross reality and parallel reality concepts capture.
 
-The original matrix also features the term embodied virtuality, in the upper right quadrant at the congruence of `experience real world' and `overlay data real'. Want explains that embodied virtuality is used here as an alternative term for \textit{ubiquitous computing} which he considers to be \textit{``essentially the opposite of VR''} and describes the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. While the reality-virtuality continuum concept and the position taken by this thesis posit that the opposite of VR is simply reality, as shown in the modified matrix in figure \ref{Want_virtuality_matrix_modified.png}, an equally valid alternative position (and presumably that held by Want) is that tangible interfaces can be employed to embody aspects of a virtual world that have no physical counterpart in the real world, and to present abstractions of real world concepts, leading to the congruence of real overlay data and real experience as embodied virtuality.
+The original matrix also features the term embodied virtuality, in the upper right quadrant at the congruence of `experience real world' and `overlay data real'. Want explains that embodied virtuality is used here as an alternative term for \textit{ubiquitous computing} which he considers to be \textit{``essentially the opposite of VR''} and describes the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. While the reality-virtuality continuum concept and the position taken by this thesis posit that the opposite of VR is simply reality, as shown in the modified matrix in figure \ref{Want_virtuality_matrix_modified.png}, an equally valid alternative position (and perhaps that held by Want) is that tangible interfaces can be employed to embody aspects of a virtual world that have no physical counterpart in the real world, to present physical abstractions of real world concepts or virtual world information, leading to the congruence of real overlay data and real experience as embodied virtuality.
 
 %The modified matrix adopts the position that the opposite of virtual reality is simply reality and that ubiquitous computing does not constitute a category of alternate reality but rather a model of human-computer interaction (that can be implemented in either reality or augmented reality, depending upon how the ubiquitous computing infrastructure presents information to the user). A ubiquitous computing system is necessarily a real environment, as by definition it is the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. However whether this real environment is augmented by virtual objects is not restricted by the concept.
 
@@ -442,7 +442,7 @@ Picking up the discussion of primary environments once more, if one follows the 
 
 When discussing a parallel reality system that allows its user to transition between two environments, one real and the other virtual, one must consider the relationship between the two environments, namely whether (and if so, to what extent) their layout, dimensions and content relate to each other. We will refer to this consideration as \textit{spatial equivalence}.
 
-This distinction depends partly upon whether one adopts a dualistic concept of virtual space experience, wherein `cyberspace' is a space in its own right with its own logic and metaphysics thus capable of playing host to any number of fantastical things and places, or whether one restricts the virtual environment by following a positivistic understanding of virtual space in which it serves only as a representation of real - using cyberspace for \textit{``creating acceptable substitutes for real \ldots\ environments''} instead of for \textit{``constructing imaginary worlds that are indistinguishable from the real world''}~\cite{Qvortrup2002}. One may also wish to consider this distinction in relation to the different stages identified by Baudrillard between simulacra and simulation, with complete spatial equivalence occupying the first stage, of a faithful image or copy of a profound reality (the positivistic position), zero spatial equivalence occupying the fourth stage, of pure simulation with no relation to anything in reality (the dualistic position), and partial equivalence perhaps occupying the second stage, a perversion of reality~\cite{Baudrillard1994}.
+This distinction depends partly upon whether one adopts a dualistic concept of virtual space experience, wherein `cyberspace' is a space in its own right with its own logic and metaphysics thus capable of playing host to any number of fantastical things and places, or whether one restricts the virtual environment by following a positivistic understanding of virtual space in which it serves only as a representation of real - using cyberspace for \textit{``creating acceptable substitutes for real \ldots\ environments''} instead of for \textit{``constructing imaginary worlds that are indistinguishable from the real world''}~\cite{Qvortrup2002}. One may also wish to consider this distinction in relation to the different stages identified by Baudrillard between simulacra and simulation, with complete spatial equivalence occupying the first stage, of a faithful image or copy of a profound reality (the positivistic position), zero spatial equivalence occupying the fourth stage, of pure simulation with no relation to anything in reality (the dualistic position), and partial equivalence perhaps occupying the second stage, a perversion of reality, or the third stage, pretending to be a faithful copy of reality~\cite{Baudrillard1994}.
 
 %=========================================================================================================
 
