--- a/thesis.tex
+++ b/thesis.tex
@@ -261,6 +261,15 @@
 %\label{publications}
 %\input{publications.tex}
 
+\chapter{VTW Hardware Reference}
+\graphicspath{ {04_vtw/images/} }
+\input{appendices/vtw-hardware.tex}
+\label{appendix-vtw-hardware}
+
+\chapter{\texttt{LLViewerSerialMovement} reference}
+\input{appendices/vtw-software.tex}
+\label{appendix-vtw-software}
+
 \chapter{Stage 1 Evaluation 12-item Likert-type Questionnaire}
 \includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/12-item-likert-type-questionnaire-stage-1.pdf}
 \label{appendix-12-item-likert-type-questionnaire-stage-1}
