Finished moving code excerpts from chapter 3 into appendices.

--- a/thesis.tex
+++ b/thesis.tex
@@ -270,6 +270,14 @@
 \input{appendices/vtw-software.tex}
 \label{appendix-vtw-software}
 
+\chapter{OpenSim Region Module GPS excerpt}
+\input{appendices/region-module.tex}
+\label{appendix-region-module}
+
+\chapter{Second Life GPS excerpt}
+\input{appendices/appendix-secondlife-haversine.tex}
+\label{appendix-secondlife-haversine}
+
 \chapter{Stage 1 Evaluation 12-item Likert-type Questionnaire}
 \includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/12-item-likert-type-questionnaire-stage-1.pdf}
 \label{appendix-12-item-likert-type-questionnaire-stage-1}
