--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -10,7 +10,7 @@
 
 \label{chapter-vtw}
 
-This chapter recounts the development of the Virtual Time Window, a platform that endeavoured to explore the suitability of a familiar alternate reality modality of interaction, using a tablet computer, GPS, accelerometer and magnetometer in combination with a Second Life/OpenSim based virtual environment, for investigation into the parallel reality concept. Virtual heritage is introduced as a field with a history of successful applications of alternate reality technologies and to which parallel reality promises to be of further benefit. The Virtual Time Window platform was tested within such a scenario, to explore the ruins of a 14th century cathedral in tandem with a complete virtual reconstruction of it as it stood in its prime.
+This chapter recounts the development of the Virtual Time Window, a platform that endeavoured to explore the suitability of a familiar alternate reality modality of interaction, using a tablet computer, GPS, accelerometer and magnetometer, in combination with a Second Life/OpenSim based virtual environment, for investigation into the parallel reality concept. Virtual heritage is introduced as a field with a history of successful applications of alternate reality technologies and to which parallel reality promises to be of further benefit. The Virtual Time Window platform was tested within such a scenario, to explore the ruins of a 14th century cathedral in tandem with a complete virtual reconstruction of it as it stood in its prime.
 
 %=========================================================================================================
 
@@ -457,38 +457,7 @@ One of the extensions that the OpenSim server provides over the Second Life serv
 
 Region modules allow for more complex and powerful extensions written in \texttt{C\#} to be developed, external to the OpenSim platform, than would otherwise be possible via Second Life's internal Linden Scripting Language (LSL). Similar to how the Second Life client's joystick interface represented an opportunity to implement the orientation control of VTW without relying upon a bespoke, modified client, an OpenSim Region Module represented a possibility to implement the position control required by VTW without similar reliance upon a bespoke client.
 
-An excerpt from the implementation of the VTW position control as a region module is included as figure \ref{RegionModuleCode1} (the full region module code is available online\RegionModuleCodeFootnote{}). This shows the use of haversine, implemented using the \texttt{atan2()} function, calculating the displacement in real world latitude between the anchor point and the new GPS reading (lines 5-8), applying the scale of the reconstruction to this displacement (lines 10-14) and then applying this scaled displacement to the virtual world Y coordinate of the anchor (lines 16-24). This process is then repeated for the longitude/X coordinate and the avatar is then be moved to the position within the OpenSim reconstruction that is equivalent to the user's new real world position. Unlike using the joystick interface to effect camera control without modifying the Second Life client, this region module approach to position control successfully produced usable results.
-
-\begin{figure}[h]
-\begin{lstlisting}[language=Java, numbers=left, numberstyle=\small, stepnumber=1, frame=single, breaklines=true, backgroundcolor=\color{codebackground}, showstringspaces=false]
-private Vector3 LatitudeLongitudeToRegionCoordinate(double newLat, double newLong, double anchorLat, double anchorLong, Vector3 anchorVector, double scale) {
-
-    double d, a, c, X, Y;
-
-    //calculate the difference in y (latitude) between the anchor & the new reading
-    d = Math.Abs(ToRadians(newLat - anchorLat));
-    a = Math.Sin(d / 2) * Math.Sin(d / 2);
-    c = 2 * Math.Atan2(Math.Sqrt(a), Math.Sqrt(1 - a));
-
-    //mean radius of the Earth is 6371km (6371000m)
-    d = 6371000 * c;
-
-    //apply scale
-    d *= scale;
-
-    //sum appropriately from the anchor
-    if (newLat > anchorLat) {
-        mlog.DebugFormat("[GPSAvatarModule]: LatitudeLongitudeToRegionCoordinate() - (Y) newLat > anchorLat.");
-        Y = (anchorVector.Y + d);
-    }
-    else {
-        mlog.DebugFormat("[GPSAvatarModule]: LatitudeLongitudeToRegionCoordinate() - (Y) newLat < anchorLat.");
-        Y = (anchorVector.Y - d);
-    }
-\end{lstlisting}
-\caption{Excerpt of OpenSim Region Module for avatar movement via GPS.}
-\label{RegionModuleCode1}
-\end{figure}
+The implementation of the VTW position control as a region module is available online\RegionModuleCodeFootnote{}. An excerpt from this code is included as appendix \ref{appendix-region-module} and shows the use of haversine, implemented using the \texttt{atan2()} function, calculating the displacement in real world latitude between the anchor point and the new GPS reading (lines 5-8), applying the scale of the reconstruction to this displacement (lines 10-14) and then applying this scaled displacement to the virtual world Y coordinate of the anchor (lines 16-24). This process is then repeated for the longitude/X coordinate and the avatar is then be moved to the position within the OpenSim reconstruction that is equivalent to the user's new real world position. Unlike using the joystick interface to effect camera control without modifying the Second Life client, this region module approach to position control successfully produced usable results.
 
 %=========================================================================================================
 
@@ -524,7 +493,7 @@ Due to the Second Life client's existing control interfaces not allowing enough 
 
 %Replaced the Linden Boost binary with that built by LightDrake
 
-The Second Life client is written predominantly in \texttt{C++} so the Asio library\asioFootnote{} from the popular Boost project\boostFootnote{} was used to imbue it with serial connectivity, allowing it to receive messages from the Arduino in an asynchronous non-blocking fashion. The fundamental buffered asynchronous serial handling was implemented using Terraneo Federico's \path{AsyncSerial} class\fedetftFootnote{} which is included in the client codebase as \path{/indra/newview/AsyncSerial}. The majority of the functionality added to the client was then implemented within \path{/indra/newview/LLViewerSerialMovement}. The core executable of the viewer \path{/indra/newview/LLAppViewer} obtains an instance of \path{LLViewerSerialMovement} and calls \path{LLViewerSerialMovement::update()} upon each iteration of the client's main update loop \path{LLAppViewer::mainLoop()}. These modifications are visualised by figure \ref{second_life_structure.png} and the modified client codebase is available in full online\footnote{\url{https://bitbucket.org/cj_davies/viewer-release-serial-io}}.
+The Second Life client is written predominantly in \texttt{C++} so the Asio library\asioFootnote{} from the popular Boost project\boostFootnote{} was used to imbue it with serial connectivity, allowing it to receive messages from the Arduino in an asynchronous non-blocking fashion. The fundamental buffered asynchronous serial handling was implemented using Terraneo Federico's \path{AsyncSerial} class\fedetftFootnote{} which is included in the client codebase as \path{/indra/newview/AsyncSerial}. The majority of the functionality added to the client was then implemented within \path{/indra/newview/LLViewerSerialMovement}. The core executable of the viewer \path{/indra/newview/LLAppViewer} obtains an instance of \path{LLViewerSerialMovement} and calls \path{LLViewerSerialMovement::update()} upon each iteration of the client's main update loop \path{LLAppViewer::mainLoop()}. These modifications are visualised by figure \ref{second_life_structure.png} and the modified client codebase is available in full online\footnote{\url{https://bitbucket.org/cj_davies/viewer-release-serial-io}}. Appendix \ref{appendix-vtw-software} provides a reference for the functions contained within \texttt{LLViewerSerialMovement}.
 
 \begin{figure}[h]
 \centering
@@ -533,9 +502,7 @@ The Second Life client is written predominantly in \texttt{C++} so the Asio libr
   \label{second_life_structure.png}
 \end{figure}
 
-Appendix \ref{appendix-vtw-software} provides a reference for the functions contained within \texttt{LLViewerSerialMovement}.
-
-Controlling the avatar's position according to latitude and longitude readings from the GPS receiver was again implemented using the haversine formula. This implementation, included as figure \ref{secondlifehaversine}, can be compared to the OpenSim region module implementation previously included as figure \ref{RegionModuleCode1}. One important difference between this Second Life client implementation and the OpenSim region module implementation is that the former uses global coordinates, rather than local coordinates\regionmodulelimitationFootnote{}. This means that the Second Life client implementation allows positional control of an avatar across region boundaries, crucial for use with a cultural heritage reconstruction that spans multiple regions in an OpenSim `megaregion'\megaregionFootnote{} such as that used for evaluation of VTW.
+Controlling the avatar's position according to latitude and longitude readings from the GPS receiver was again implemented using the haversine formula. This implementation, included as appendix \ref{appendix-secondlife-haversine}, can be compared to the OpenSim region module implementation previously included as appendix \ref{appendix-region-module}. One important difference between this Second Life client implementation and the OpenSim region module implementation is that the former uses global coordinates, rather than local coordinates\regionmodulelimitationFootnote{}. This means that the Second Life client implementation allows positional control of an avatar across region boundaries, crucial for use with a cultural heritage reconstruction that spans multiple regions in an OpenSim `megaregion'\megaregionFootnote{} such as that used for evaluation of VTW.
 
 These modifications to the Second Life client are configured/controlled via a window added to the client and accessed via a menu entry (see figure \ref{pangolin_second_life_dialogue.png}). The implementation of this window resides in \path{/indra/newview/LLViewerSerialMonitor}. This allows for specification of the path to the serial device, along with its baudrate, as well as the specification of the anchor point: the latitude and longitude of the point in the real world and the equivalent X/Y coordinates in the Second Life reconstruction. The window then provides diagnostic output showing the reconstructed messages coming in from the serial device, along with controls to individually enable/disable orientation and position control and alter the high-pass and smoothing applied to both controls.
 
@@ -544,56 +511,6 @@ These modifications to the Second Life client are configured/controlled via a wi
   \includegraphics[width=0.6\linewidth]{pangolin_second_life_dialogue.png}
   \caption{Configuration window in VTW's modified Second Life client.}
   \label{pangolin_second_life_dialogue.png}
-\end{figure}
-
-\begin{figure}[h]
-\begin{lstlisting}[language=C++, numbers=left, numberstyle=\small, stepnumber=1, frame=single, breaklines=true, backgroundcolor=\color{codebackground}, showstringspaces=false]
-boost::tuple<float, float, float> LLViewerSerialMovement::latitudeLongitudeToRegionCoordinate(double newLat, double newLong, float anchorLat, float anchorLong, float scale, boost::tuple<float, float, float> anchorCoordinates) {
-
-    double d, a, c, X, Y;
-
-    // calculate difference in y (latitude) between anchor & new reading
-    d = fabs(degreesToRadians(newLat - anchorLat));
-    a = sin(d / 2) * sin(d / 2);
-    c = 2 * atan2(sqrt(a), sqrt(1 - a));
-
-    // mean radius of the Earth is 6371km (6371000m)
-    d = 6371000 * c;
-
-    // apply scale
-    d *= scale;
-
-    // sum appropriately from the anchor
-    if (newLat > anchorLat) {
-        Y = (anchorCoordinates.get<1>() + d);
-    }
-    else {
-        Y = (anchorCoordinates.get<1>() - d);
-    }
-
-    // calculate difference in x (longitude) between anchor & new reading
-    d = fabs(degreesToRadians((newLong - anchorLong)));
-    a = sin(d / 2) * sin(d / 2) * cos(degreesToRadians(newLat)) * cos(degreesToRadians(anchorLat));
-    c = 2 * atan2(sqrt(a), sqrt(1 - a));
-    
-    d = 6371000 * c;
-
-    // apply scale
-    d *= scale;
-
-    // sum appropriately from anchor
-    if (newLong > anchorLong) {
-        X = (anchorCoordinates.get<0>() + d);
-    }
-    else {
-        X = (anchorCoordinates.get<0>() - d);
-    }
-
-    return boost::make_tuple(X, Y, anchorCoordinates.get<2>());
-}
-\end{lstlisting}
-\caption{Converting longitude and latitude to Second Life coordinates using haversine in modified Second Life codebase.}
-\label{secondlifehaversine}
 \end{figure}
 
 %=========================================================================================================
